Update docker & docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,8 @@
+version: "3"
 services:
   compile:
     hostname: archcompiler
-    build:
-      dockerfile_inline: |
-        FROM archlinux:base-devel
-
-        WORKDIR /work
-        ENTRYPOINT make clean && make
+    build: .
     volumes: 
     - ".:/work"
 
